# chess-binpack-utils

./: .gitignore  Cargo.toml  README.md
src/: benchmark.rs  cli.rs  convert.rs  error.rs  inspect.rs  interrupt.rs  lib.rs  main.rs  model.rs  shuffle.rs  unique.rs  validate.rs
src/backend/: bulletformat.rs  mod.rs  sfbinpack.rs  viriformat.rs
